# x

./: .buckconfig  .clang-format  .clang-tidy  .envrc  .gitignore  .rustfmt.toml  BUCK  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.adoc  README.md  REUSE.toml  flake.nix  package.json  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml  lto.toml
LICENSES/: LicenseRef-BSD-2-Clause-Patent.0.txt
src/lifehash/: __main__.py  _bin.py  ffi.cxx
